packages/codemirror/src/extensions/lsp/tooltip.css
.cm-lint-tooltip .heading {
    margin-top: 0;
    margin-bottom: 0.25em;
    font-size: smaller;
}
.cm-lint-tooltip .heading.warning {
    color: #a26100;
}
.cm-lint-tooltip .heading.error {
    color: #900;
}
.cm-lint-tooltip .heading.accessibility-level-1 {
    color: #5b21b6;
}
.cm-lint-tooltip .heading.accessibility-level-2 {
    color: #9061d1;
}
.cm-lintRange.cm-doenet-accessibility-diagnostic {
    background-image: none !important;
    text-decoration-line: underline;
    text-decoration-style: dotted;
    text-decoration-thickness: 0.6px;
    text-underline-offset: 0.18em;
    text-decoration-skip-ink: none;
}

.cm-lintRange.cm-doenet-accessibility-diagnostic-level-1 {
    text-decoration-color: #5b21b6;
}

.cm-lintRange.cm-doenet-accessibility-diagnostic-level-2 {
    text-decoration-color: #b9a4e6;
}

.cm-tooltip-lint
    .cm-diagnostic.cm-diagnostic-warning:has(
        .cm-lint-tooltip .heading.accessibility-level-1
    ) {
    border-left-color: #5b21b6;
}

.cm-tooltip-lint
    .cm-diagnostic.cm-diagnostic-warning:has(
        .cm-lint-tooltip .heading.accessibility-level-2
    ) {
    border-left-color: #9061d1;
}

.cm-diagnostic {
    white-space: unset !important;
}
.cm-lint-body code {
    font-size: larger;
    white-space: pre-wrap;
    color: #d80085;
    padding: 0px 2px;
}
.cm-lint-body p {
    margin: 0.25em 0;
}
.cm-lint-body p:last-child {
    margin-bottom: 0;
}
.cm-lint-body p:first-child {
    margin-top: 0;
}

